[gd_scene load_steps=11 format=2]

[ext_resource path="res://UI/Buttons/OptionsButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://UI/TitleScreenLogo.png" type="Texture" id=2]
[ext_resource path="res://UI/Buttons/CreditsButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://UI/Buttons/NewGameButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://UI/Buttons/ControlsButton.tscn" type="PackedScene" id=5]
[ext_resource path="res://UI/Buttons/ReturnButton.png" type="Texture" id=6]
[ext_resource path="res://UI/TitleScreen.gd" type="Script" id=7]
[ext_resource path="res://UI/ControlsScreen.png" type="Texture" id=8]
[ext_resource path="res://UI/VCR_OSD_MONO_1.001.ttf" type="DynamicFontData" id=9]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 9 )

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Logo" type="TextureRect" parent="Menu"]
margin_right = 320.0
margin_bottom = 64.0
texture = ExtResource( 2 )
stretch_mode = 4

[node name="CenterRow" type="HBoxContainer" parent="Menu"]
margin_top = 68.0
margin_right = 320.0
margin_bottom = 161.0
size_flags_vertical = 3

[node name="Buttons" type="VBoxContainer" parent="Menu/CenterRow"]
margin_right = 320.0
margin_bottom = 93.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="NewGameButton" parent="Menu/CenterRow/Buttons" instance=ExtResource( 4 )]
margin_right = 320.0

[node name="ControlsButton" parent="Menu/CenterRow/Buttons" instance=ExtResource( 5 )]
margin_top = 24.0
margin_right = 320.0
margin_bottom = 44.0

[node name="OptionsButton" parent="Menu/CenterRow/Buttons" instance=ExtResource( 1 )]
visible = false
margin_top = 24.0
margin_bottom = 44.0

[node name="CreditsButton" parent="Menu/CenterRow/Buttons" instance=ExtResource( 3 )]
visible = false
margin_top = 24.0
margin_bottom = 44.0

[node name="Label" type="Label" parent="Menu"]
margin_top = 165.0
margin_right = 320.0
margin_bottom = 180.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.647059, 0.188235, 0.188235, 1 )
custom_colors/font_color_shadow = Color( 0.458824, 0.141176, 0.219608, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 2
text = "Vers√£o Alpha 0.1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ControlScreen" type="TextureRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -40.0
margin_right = 152.0
margin_bottom = 76.0
rect_scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 8 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReturnButton" type="TextureButton" parent="ControlScreen"]
margin_left = 330.0
margin_top = 180.0
margin_right = 370.0
margin_bottom = 220.0
texture_normal = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Menu/CenterRow/Buttons/NewGameButton" to="." method="_on_NewGameButton_pressed"]
[connection signal="pressed" from="Menu/CenterRow/Buttons/ControlsButton" to="." method="_on_ControlsButton_pressed"]
[connection signal="pressed" from="ControlScreen/ReturnButton" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="ControlScreen/ReturnButton" to="." method="_on_ReturnButton_pressed"]
